@@ -53,6 +53,8 @@ it from source control: http://www.mediawiki.org/wiki/Download_from_SVN
 * Add width parameter to Special:Filepath to allow getting the file path of a thumbnail.
 * (bug 26870) Add size to {{filepath:}}
 * Upload warnings now show a thumbnail of the uploaded file
+* Introduced the edittools-upload message, which will be inserted under the
+  upload form instead of edittools if available
 
 === Bug fixes in 1.18 ===
 * (bug 23119) WikiError class and subclasses are now marked as deprecated
